# simkl-data-validator

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: simkl.yml
data/: simkl_ids.json
scripts/: simkl_authentication.py  simkl_validate.py
